--- a/stackFile.yml
+++ b/stackFile.yml
@@ -56,7 +56,7 @@ services:
     ports:
       - 80
       - 443
-    remoteAccess: true
+    remoteAccess: false
     env:
       BASICAUTH_KIBANA_USER: null
       BASICAUTH_KIBANA_PASS: null
